# AndroidNativeBasedSample

./: .gitignore  android-config.gradle  build.gradle  create-module.sh  dependencies.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fondesa/androidnativebasedsample/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/fondesa/notes/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-wrapper.cpp  jni_wrapper.cpp
app/src/main/cpp/jni_util/: jclass_util.cpp  jclass_util.hpp  mapping.cpp  mapping.hpp  pointer_wrapper.hpp  string_field.cpp  string_field.hpp
app/src/main/cpp/log/: log.cpp  log.hpp
app/src/main/java/com/fondesa/androidnativebasedsample/: App.kt  DraftNote.kt  Foo.kt  MainActivity.kt  Note.kt  NoteRepository.kt
app/src/main/java/com/fondesa/notes/: App.kt  DraftNote.kt  Foo.kt  MainActivity.kt  Note.kt  NoteRepository.kt
app/src/main/java/com/fondesa/notes/di/: AppComponent.kt  AppModule.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/fondesa/androidnativebasedsample/: ExampleUnitTest.kt
app/src/test/java/com/fondesa/notes/: ExampleUnitTest.kt
buildSrc/src/main/groovy/com/fondesa/notes/gradle/: CommonAndroidPlugin.groovy  CommonJvmPlugin.groovy
core/core-api/: build.gradle
core/core-api/src/main/kotlin/com/fondesa/notes/core/: AppInitializer.kt
core/core-api/src/main/kotlin/com/fondesa/notes/core/api/: AppInitializer.kt
gradle/wrapper/: gradle-wrapper.properties
log/log-api/src/main/kotlin/com/fondesa/notes/log/api/: Log.kt  Logger.kt
log/log-di/src/main/: AndroidManifest.xml
log/log-di/src/main/kotlin/com/fondesa/notes/log/di/: LogModule.kt
log/log-impl/src/main/: AndroidManifest.xml
log/log-impl/src/main/kotlin/com/fondesa/notes/log/impl/: TimberAdjustedDebugTree.kt  TimberInitializer.kt  TimberLogger.kt
native/: build.gradle
native/src/: CMakeLists.txt  export.cpp
native/src/export/: export_draft_native_notes_repository.cpp  export_native_notes_interactor.cpp  export_native_notes_repository.cpp  export_notes_database_initializer.cpp
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: CMakeLists.txt  jni_wrapper.cpp
native/src/main/cpp/log/: log.cpp
native/src/main/cpp/util/: pointer_wrapper.hpp
native/src/note/: draft_class_util.hpp  draft_note_class_util.hpp  note_class_util.hpp
native/src/util/: jclass_util.cpp  jclass_util.hpp  mapping.cpp  pointer_wrapper.hpp  string_field.cpp
notes/notes-api/src/main/kotlin/com/fondesa/notes/notes/api/: Draft.kt  DraftNote.kt  DraftNotesRepository.kt  Note.kt  NotesInteractor.kt  NotesRepository.kt
notes/notes-di/: build.gradle
notes/notes-di/src/main/: AndroidManifest.xml
notes/notes-di/src/main/kotlin/com/fondesa/notes/notes/di/: InsertNoteViewComponent.kt  NotesModule.kt  SearchViewComponent.kt  SearchViewModule.kt
notes/notes-impl/: build.gradle
notes/notes-impl/src/main/: AndroidManifest.xml
notes/notes-impl/src/main/kotlin/com/fondesa/notes/notes/impl/: InsertNoteView.kt  NativeDraftNotesRepository.kt  (+14 more)
notes/notes-impl/src/main/res/drawable/: bg_date.xml  ic_search.xml
notes/notes-impl/src/main/res/layout/: activity_notes.xml  row_note.xml  search_view.xml  sheet_insert_note.xml
notes/notes-impl/src/main/res/values/: colors.xml  dimens.xml  strings.xml
testing/testing-android/: build.gradle
testing/testing-android/src/main/: AndroidManifest.xml
testing/testing-jvm/: build.gradle
thread/thread-api/: build.gradle
thread/thread-di/: build.gradle
thread/thread-di/src/main/: AndroidManifest.xml
thread/thread-impl/: build.gradle
thread/thread-impl/src/main/: AndroidManifest.xml
time/time-api/: build.gradle
ui/ui-api/: build.gradle
ui/ui-api/src/main/: AndroidManifest.xml
ui/ui-api/src/main/res/values/: colors.xml  dimens.xml  styles.xml
ui/ui-api/src/main/res/values-v21/: styles.xml
ui/ui-api/src/main/res/values-v23/: styles.xml
ui/ui-di/: build.gradle
ui/ui-di/src/main/: AndroidManifest.xml
ui/ui-impl/: build.gradle
ui/ui-impl/src/main/: AndroidManifest.xml
ui/ui-impl/src/main/res/values/: strings.xml
(+48 files in other folders)
